[package]
name = "timetrax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version="0.9.0", features=["tokio"]}
rusqlite = {version="0.29",features=["chrono", "bundled"]}
chrono = "0.4"
holiday_de = "0.1.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[[bin]]
name="server"
path="src/server.rs"

[[bin]]
name="native"
path="src/main.rs"