[workspace]
members = ["native", "server"]

[package]
name = "timetrax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rusqlite = {version="0.29",features=["chrono", "bundled"]}
chrono = "0.4"
holiday_de = "0.1.0"

